--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
-  "name": "first-angular2-app",
-  "version": "0.0.0",
-  "license": "MIT",
+  "name": "Angular2",
+  "description": "Hyperledger Composer Angular project",
+  "version": "0.0.1",
+  "author": "Chandrakala",
+  "email": "chandrakalasr@gmail.com",
+  "license": "Apache-2.0",
+  "engines": {
+    "node": ">=8",
+    "npm": ">=5"
+  },
+  "bin": {
+    "Angular2": "app.js"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build && node server.js",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,45 +22,51 @@
   "private": true,
   "dependencies": {
     "@agm/core": "1.0.0-beta.2",
-    "@angular/common": "^4.3.0",
-    "@angular/compiler": "^4.3.0",
-    "@angular/core": "^4.3.0",
-    "@angular/forms": "^4.3.0",
-    "@angular/http": "^4.4.7",
-    "@angular/platform-browser": "^4.3.0",
-    "@angular/platform-browser-dynamic": "^4.3.0",
-    "@angular/router": "^4.3.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "@cloudant/cloudant": "^2.2.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
+    "cfenv": "^1.0.4",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "moment": "^2.22.2",
     "requestify": "^0.2.5",
-    "rxjs": "^5.0.1",
-    "rxjs-compat": "^6.1.0",
+    "concurrently": "^3.1.0",
+    "config": "^1.21.0",
+    "core-js": "^2.4.1",
+    "http-proxy-middleware": "^0.18.0",
+    "jquery": "^3.2.1",
+    "rxjs": "^5.1.0",
+    "tether": "^1.4.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^4.3.0",
-    "@types/jasmine": "^2.5.53",
-    "@types/node": "~6.0.79",
-    "codelyzer": "^3.1.1",
-    "jasmine-core": "^2.6.4",
-    "jasmine-spec-reporter": "^4.1.1",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.2.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@types/jasmine": "2.5.52",
+    "@types/node": "7.0.5",
+    "codelyzer": "~2.0.0",
+    "jasmine-core": "~2.5.2",
+    "jasmine-spec-reporter": "~3.2.0",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "^3.1.0",
-    "tslint": "^5.4.3",
-    "typescript": "^2.1.0"
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "protractor": "~5.1.0",
+    "sinon": "2.3.8",
+    "ts-node": "~2.0.0",
+    "tslint": "~4.5.0",
+    "typescript": "~2.2.0"
   }
 }
